--- a/HotelManagement-Frontend/index.html
+++ b/HotelManagement-Frontend/index.html
@@ -13,7 +13,7 @@
             margin: 0;
         }
     </style>
-    <title>TheHotel</title>
+    <title>MarwanContinental</title>
 </head>
 <body>
 <div id="app"></div>
